--- a/index.html
+++ b/index.html
@@ -1,120 +1,158 @@
 <!DOCTYPE html>
 <html lang="pl">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>webstudio</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h2>
-            <a href="index.html">webstudio</a>
-        </h2>
-        <nav>
-            <ul>
-            <li><a href="/agencja">agencja</a></li>
-            <li><a href="/portfolio">portfolio</a></li>
-            <li><a href="/kontakt">kontakt</a></li>
-            </ul>
-        </nav>
-        <a href="info.devstudio.com">info.devstudio.com</a>
-        <a href="+48111111111">+48 111 111 111</a>
+      <h2>
+        <a href="index.html">webstudio</a>
+      </h2>
+      <nav>
+        <ul>
+          <li><a href="/agencja">agencja</a></li>
+          <li><a href="/portfolio">portfolio</a></li>
+          <li><a href="/kontakt">kontakt</a></li>
+        </ul>
+      </nav>
+      <a href="mailto:info.devstudio.com">info.devstudio.com</a>
+      <a href="tel:+48111111111">+48 111 111 111</a>
     </header>
     <main>
-        <h1>
-            efektywne rozwiązania dla waszego biznesu
-        </h1>
-        <input type="button" value="zamów usługę">
-        <div>
+      <section>
+        <h1>efektywne rozwiązania dla waszego biznesu</h1>
+        <input type="button" value="zamów usługę" />
+      </section>
+      <section>
         <ul>
-            <li>
-                <h2>
-                    lorem ipsum
-                </h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
-            </li>
-            <li>
-                <h2>
-                    lorem ipsum
-                </h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et
-                malesuada</p>
-            </li>
-            <li>
-                <h2>
-                    lorem ipsum
-                </h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et
-                malesuada</p>
-            </li>
+          <li>
+            <h2>lorem ipsum</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
+            </p>
+          </li>
+          <li>
+            <h2>lorem ipsum</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
+            </p>
+          </li>
+          <li>
+            <h2>lorem ipsum</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
+            </p>
+          </li>
         </ul>
-        </div>
-        <h2>
-            czym się zajmujemy
-        </h2>
-        <div>
+      </section>
+      <section>
+        <h2>czym się zajmujemy</h2>
         <ul>
-            <li><img src="images/klawiaturaikartka.jpg" alt="pracująca osoba pisząca na klawiaturze" width="370" height="294"></li> 
-            <li><img src="images/telefonilaptop.jpg"  alt="osoba sprawdzająca telefon" width="370" height="294"></li>
-            <li><img src="images/tablet.jpg" alt="osoba projektuje coś na tablecie" width="370" height="294"></li>
-
-         </ul>
-        </div>
-    
-        <h2>
-            nasz zespół
-        </h2>
-        <ul>
-            <li>
-                <figure>
-                    <img src="images/productdesigner.jpg" alt="product designer" width="270" height="260">
-                    <figcaption>
-                        <p><strong>john doe</strong></p>
-                        <p>product designer</p>
-                    </figcaption>
-                </figure>
-            </li>
-            <li>
-                <figure>
-                    <img src="images/frontenddeveloper.jpg" alt="frontend developer" width="270" height="260">
-                    <figcaption>
-                        <p><strong>john doe</strong></p>
-                        <p>frontend developer</p>
-                    </figcaption>
-                </figure>
-            </li>
-            <li>
-                <figure>
-                    <img src="images/marketing.jpg" alt="marketing" width="270" height="260">
-                    <figcaption>
-                        <p><strong>john doe</strong></p>
-                        <p>marketing</p>
-                    </figcaption>
-                </figure>
-            </li>
-            <li>
-                <figure>
-                    <img src="images/uidesigner.jpg" alt="ui designer" width="270" height="260">
-                    <figcaption>
-                        <p><strong>john doe</strong></p>
-                        <p>ui designer</p>
-                    </figcaption>
-                </figure>
-            </li>
+          <li>
+            <img
+              src="images/keybord_and_paper.jpg"
+              alt="pracująca osoba pisząca na klawiaturze"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="images/phone_and_laptop.jpg"
+              alt="osoba sprawdzająca telefon"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="images/tablet.jpg"
+              alt="osoba projektuje coś na tablecie"
+              width="370"
+              height="294"
+            />
+          </li>
         </ul>
-
+      </section>
+      <section>
+        <h2>nasz zespół</h2>
+        <ul>
+          <li>
+            <figure>
+              <img
+                src="images/product_designer.jpg"
+                alt="product designer"
+                width="270"
+                height="260"
+              />
+              <figcaption>
+                <h3>john doe</h3>
+                <p>product designer</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="images/frontend_developer.jpg"
+                alt="frontend developer"
+                width="270"
+                height="260"
+              />
+              <figcaption>
+                <h3>john doe</h3>
+                <p>frontend developer</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="images/marketing.jpg"
+                alt="marketing"
+                width="270"
+                height="260"
+              />
+              <figcaption>
+                <h3>john doe</h3>
+                <p>marketing</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="images/ui_designer.jpg"
+                alt="ui designer"
+                width="270"
+                height="260"
+              />
+              <figcaption>
+                <h3>john doe</h3>
+                <p>ui designer</p>
+              </figcaption>
+            </figure>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer>
-        <h2>
-            <a href="index.html">webstudio</a>
-        </h2>
-        
-        <address>
-            m. warszawa, aleje jerozolimskie 21
-        </address> 
-        <p>info@example.com</p>
-        <p>+48 111 111 111</p>
+      <h2>
+        <a href="index.html">webstudio</a>
+      </h2>
+
+      <address>
+        <p>m. warszawa, aleje jerozolimskie 21</p>
+        <a href="mailto:info@example.com">info@example.com</a>
+        <br />
+        <a href="tel:+48111111111">+48 111 111 111</a>
+      </address>
     </footer>
-</body>
+  </body>
 </html>
